deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: centralized-k8s-ai
  namespace: mcp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: centralized-k8s-ai
  template:
    metadata:
      labels:
        app: centralized-k8s-ai
    spec:
      containers:
      - name: centralized-k8s-ai
        image: python:3.10
        command: ["sh", "-c"]
        args:
          - |
            apt update && apt install -y git &&
            git clone https://github.com/Sanketarali/centralized-k8s-ai.git /app &&
            cd /app/app &&
            python3 -m venv venv &&
            . venv/bin/activate &&
            pip install --upgrade pip &&
            pip install -r requirements.txt &&
            uvicorn main:app --host 0.0.0.0 --port 8000
        ports:
        - containerPort: 8000
